--- a/main.tex
+++ b/main.tex
@@ -34,10 +34,10 @@
 %% Add newly defined newly defined commands.
 \input{new_commands}
 
-\usepackage{draftwatermark}
-\SetWatermarkText{DRAFT}
-\SetWatermarkScale{5.2} % Adjust scale as needed
-\SetWatermarkColor[gray]{0.9} % Adjust transparency (1=opaque, 0=transparent)
+%\usepackage{draftwatermark}
+%\SetWatermarkText{DRAFT}
+%\SetWatermarkScale{5.2} % Adjust scale as needed
+%\SetWatermarkColor[gray]{0.9} % Adjust transparency (1=opaque, 0=transparent)
 
 % Custom configuration for code appearance
 \lstset{
@@ -70,7 +70,7 @@
 
 \affil[1]{Universit\`a di Pisa and INFN}
 \affil[2]{ETH Zürich and CERN}
-\affil[3]{}
+\affil[3]{SPRACE-Unesp}
 \affil[4]{CERN}
 
 \title{Optimal HLT Calibrations} 
@@ -89,7 +89,7 @@
 \DeclareSIUnit{\HS}{HS23}
 
 \begin{document}
-\pagewiselinenumbers
+%\pagewiselinenumbers
 
 % Load colors from Tang palette, among many others.
 \input{colors}
