--- a/new_commands.tex
+++ b/new_commands.tex
@@ -62,6 +62,7 @@
 \newcommand{\Phasetwo}{\text{\mbox{Phase-2}}\xspace}
 \newcommand{\pileup}{$\langle{\rm PU}\rangle$\xspace}
 \newcommand{\pileupof}[1]{$\langle{\rm PU}\rangle = #1$\xspace}
+\newcommand{\Rthree}{\ensuremath{\mathrm{R}^3}\xspace}
 
 %%% Copied from ptdr-definitions.sty
 % Measurements and units...
