--- a/references.bib
+++ b/references.bib
@@ -1,144 +1,25 @@
-@online{ngt-recipes,
-  author = {Marco Rovere},
-  title = {NGT Documentation site},
-  year = {2024},
-  url = {https://cms-ngt-hlt.docs.cern.ch/Task311/2024/Recipes/},
-  note = {Accessed: 2024-09-28},
+@article{Futyan:2010zz,
+    author = "Futyan, David",
+    editor = "Gruntorad, Jan and Lokajicek, Milos",
+    title = "{Commissioning the CMS alignment and calibration framework}",
+    doi = "10.1088/1742-6596/219/3/032041",
+    journal = "J. Phys. Conf. Ser.",
+    volume = "219",
+    pages = "032041",
+    year = "2010"
 }
-%
-@online{ngt-pies,
-  author = {Marco Rovere},
-  title = {NGT Pie-chart site},
-  year = {2024},
-  url = {https://rovere.web.cern.ch/rovere/Phase2_HLT/circles/web/piechart.php},
-  note = {Accessed: 2024-09-28},
+@article{Cerminara:2015hov,
+    author = "Cerminara, G. and van Besien, B.",
+    title = "{Automated workflows for critical time-dependent calibrations at the CMS experiment}",
+    doi = "10.1088/1742-6596/664/7/072009",
+    journal = "J. Phys. Conf. Ser.",
+    volume = "664",
+    number = "7",
+    pages = "072009",
+    year = "2015"
 }
-%
-@online{hlt-timing-script,
-  author = {CMSSW},
-  title = {HLT Phase2 Official timing script},
-  year = {2024},
-  url = {
-         https://github.com/cms-sw/cmssw/blob/master/HLTrigger/Configuration/python/HLT_75e33/test/runHLTTiming.sh
-         },
-  note = {Accessed: 2024-09-28},
-}
-%
-@online{benchmark-script,
-  author = {Andrea Bocci},
-  title = {Official benchmark script},
-  year = {2024},
-  url = {
-         https://github.com/cms-patatrack/patatrack-scripts/blob/master/benchmark
-         },
-  note = {Accessed: 2024-09-28},
-}
-%
-@online{pie-hltp2-ttbar,
-  author = {Marco Rovere},
-  title = {Pie-chart with HLT Phase2 measurements on TTbar sample with 200PU},
-  year = {2024},
-  url = {
-         https://rovere.web.cern.ch/rovere/Phase2_HLT/circles/web/piechart.php?local=false&dataset=NGT_Measurements%2Flogs.Bergamo.HLT.64j.8t.8s%2FPhase2Timing_resources_abs&resource=time_real&colours=default&groups=packages&show_labels=true&threshold=0
-         },
-  note = {Accessed: 2024-09-28},
-}
-%
-@online{pie-hltp2-l1askim,
-  author = {Marco Rovere},
-  title = {Pie-chart with HLT Phase2 measurements on L1ASkim sample with 200PU},
-  year = {2024},
-  url = {
-         https://rovere.web.cern.ch/rovere/Phase2_HLT/circles/web/piechart.php?local=false&dataset=NGT_Measurements%2Flogs.Bergamo.HLT.L1ASkimReducedMenuFromRelVals.64j.8t.8s%2FPhase2Timing_resources_abs&resource=time_real&colours=default&groups=packages&show_labels=true&threshold=0
-         },
-  note = {Accessed: 2024-09-28},
-}
-%
-@online{pie-offp2-ttbar,
-  author = {Marco Rovere},
-  title = {Pie-chart with Offline Phase2 measurements on TTbar sample with 200PU
-           },
-  year = {2024},
-  url = {
-         https://rovere.web.cern.ch/rovere/Phase2_HLT/circles/web/piechart.php?local=false&dataset=NGT_Measurements%2Flogs.Bergamo.Offline.TTbarSkimFromSprint24.8j.64t.64s%2FPhase2TimingOffline_resources&resource=time_real&colours=default&groups=packages&show_labels=true&threshold=0
-         },
-  note = {Accessed: 2024-09-28},
-}
-%
-@online{pie-offp2-l1askim,
-  author = {Marco Rovere},
-  title = {Pie-chart with Offline Phase2 measurements on L1ASkim sample with
-           200PU},
-  year = {2024},
-  url = {
-         https://rovere.web.cern.ch/rovere/Phase2_HLT/circles/web/piechart.php?local=false&dataset=NGT_Measurements%2Flogs.Bergamo.Offline.L1ASkimReducedMenuFromRelVals.8j.64t.64s%2FPhase2TimingOffline_resources&resource=time_real&colours=default&groups=packages&show_labels=true&threshold=0
-         },
-  note = {Accessed: 2024-09-28},
-}
-%
-@online{ngt-offlinep2-docs,
-  author = {Marco Rovere},
-  title = {NGT Instructions on how to measure Offline Phase2 performance.},
-  year = {2024},
-  url = {
-         https://cms-ngt-hlt.docs.cern.ch/Task311/2024/OfflinePhase2_Measurements/
-         },
-  note = {Accessed: 2024-09-28},
-}
-%
-@techreport{Collaboration:2759072,
-  author = "Collaboration, CMS",
-  title = "{The Phase-2 Upgrade of the CMS Data Acquisition and High Level
-           Trigger}",
-  institution = "CERN",
-  reportNumber = "CERN-LHCC-2021-007, CMS-TDR-022",
-  address = "Geneva",
-  year = "2021",
-  url = "https://cds.cern.ch/record/2759072",
-  note = "This is the final version of the document, approved by the LHCC",
-}
-%
-@online{hs23-bechmarks,
-  author = {HEPiX},
-  title = {Benchmarking},
-  year = {2024},
-  url = {https://w3.hepix.org/benchmarking/scores_HS23.html},
-  note = {Accessed: 2024-09-28},
-}
-%
-@article{David_Futyan_2010,
-doi = {10.1088/1742-6596/219/3/032041},
-url = {https://dx.doi.org/10.1088/1742-6596/219/3/032041},
-year = {2010},
-month = {apr},
-publisher = {},
-volume = {219},
-number = {3},
-pages = {032041},
-author = {David Futyan and  (on behalf ofthe Cms Collaboration)},
-title = {Commissioning the CMS alignment and calibration framework},
-journal = {Journal of Physics: Conference Series},
-abstract = {The CMS experiment has developed a powerful framework to ensure the precise and prompt alignment and calibration of its components, which is a major prerequisite to achieve the optimal performance for physics analysis. The prompt alignment and calibration strategy harnesses computing resources both at the Tier-0 site and the CERN Analysis Facility (CAF) to ensure fast turnaround for updating the corresponding database payloads. An essential element is the creation of dedicated data streams concentrating the specific event information required by the various alignment and calibration workflows. The resulting low latency is required for feeding the resulting constants into the prompt reconstruction process, which is essential for achieving swift physics analysis of the LHC data. This report discusses the implementation and the computational aspects of the alignment and calibration framework. Recent commissioning campaigns with cosmic muons, beam halo and simulated data have been used to gain detailed experience with this framework, and results of this validation are reported.}
-}
-
-@article{Cerminara_2015,
-doi = {10.1088/1742-6596/664/7/072009},
-url = {https://dx.doi.org/10.1088/1742-6596/664/7/072009},
-year = {2015},
-month = {dec},
-publisher = {IOP Publishing},
-volume = {664},
-number = {7},
-pages = {072009},
-author = {G Cerminara and B van Besien and on behalf of the CMS Collaboration},
-title = {Automated workflows for critical time-dependent calibrations at the CMS experiment},
-journal = {Journal of Physics: Conference Series},
-abstract = {Fast and efficient methods for the calibration and the alignment of the detector are a key asset to exploit the physics potential of the Compact Muon Solenoid (CMS) detector and to ensure timely preparation of results for conferences and publications. To achieve this goal, the CMS experiment has set up a powerful framework. This includes automated workflows in the context of a prompt calibration concept, which allows for a quick turnaround of the calibration process following as fast as possible any change in running conditions. The presentation will review the design and operational experience of these workflows and the related monitoring system during the LHC Run I and focus on the development, deployment and commissioning in preparation of Run II.}
-}
-
 @techreport{Pigazzini:2853679,
       author        = "Pigazzini, Simone",
-      collaboration = "CMS",
       title         = "{Automatic data processing for prompt calibration of the
                        CMS ECAL}",
       institution   = "CERN",
@@ -147,31 +28,34 @@ abstract = {Fast and efficient methods for the calibration and the alignment of 
       year          = "2023",
       url           = "https://cds.cern.ch/record/2853679",
 }
-
-@article{Gruttola_2010,
-   title={First experience in operating the population of the condition databases for the CMS experiment},
-   volume={219},
-   ISSN={1742-6596},
-   url={http://dx.doi.org/10.1088/1742-6596/219/4/042046},
-   DOI={10.1088/1742-6596/219/4/042046},
-   number={4},
-   journal={Journal of Physics: Conference Series},
-   publisher={IOP Publishing},
-   author={Gruttola, Michele De and Guida, Salvatore di and Glege, Frank and Innocente, Vincenzo and Paolucci, Pierluigi and Futyan, David and Govi, Giacomo and Pierro, Antonio and Schlatter, Dieter and Collaboration, the Cms},
-   year={2010},
-   month=apr, pages={042046} }
-
-@article{CMS:2022ali, volume={1037},
-   ISSN={0168-9002},
-   title={Strategies and performance of the CMS silicon tracker alignment during LHC Run 2},
-   author={CMS Collaboration},
-   url={http://dx.doi.org/10.1016/j.nima.2022.166795},
-   DOI={10.1016/j.nima.2022.166795},
-   journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
-   publisher={Elsevier BV},
-   year={2022},
-   month=aug, pages={166795} }
-
+@article{DeGruttola:2010gb,
+    author = "De Gruttola, M. and Di Guida, S. and Futyan, D. and Glege, F. and Govi, G. and Innocente, V. and Paolucci, P. and Pierro, A. and Schlatter, D.",
+    editor = "Gruntorad, Jan and Lokajicek, Milos",
+    title = "{First experience in operating the population of the condition databases for the CMS experiment}",
+    eprint = "1001.1676",
+    archivePrefix = "arXiv",
+    primaryClass = "physics.ins-det",
+    doi = "10.1088/1742-6596/219/4/042046",
+    journal = "J. Phys. Conf. Ser.",
+    volume = "219",
+    pages = "042046",
+    year = "2010"
+}
+@article{CMS:2021ime,
+    author = "Tumasyan, Armen and others",
+    collaboration = "CMS",
+    title = "{Strategies and performance of the CMS silicon tracker alignment during LHC Run~2}",
+    eprint = "2111.08757",
+    archivePrefix = "arXiv",
+    primaryClass = "physics.ins-det",
+    reportNumber = "CMS-TRK-20-001, CERN-EP-2021-203",
+    doi = "10.1016/j.nima.2022.166795",
+    journal = "Nucl. Instrum. Meth. A",
+    volume = "1037",
+    pages = "166795",
+    year = "2022"
+}
+%
 @article{CMS:2024zhe,
     author = "Hayrapetyan, Aram and others",
     collaboration = "CMS",
@@ -186,48 +70,18 @@ abstract = {Fast and efficient methods for the calibration and the alignment of 
 %
 @online{micron60tb,
   author = {Micron},
-  title = {Micron 6550 ION NVMe SSD},
+  title = "{Micron 6550 ION NVMe SSD}",
   year = {2024},
   url = {https://www.micron.com/products/storage/ssd/data-center-ssd/6550-ion},
   note = {Accessed: 2024-11-27},
 }
-
-@inproceedings{di2015cms,
-  title={The CMS condition database system},
-  author={Di Guida, S and Govi, G and Ojeda, Miguel and Pfeiffer, Andreas and Sipos, R and ATLAS Collaboration and others},
-  booktitle={Journal of Physics: Conference Series},
-  volume={664},
-  number={4},
-  pages={042024},
-  year={2015},
-  organization={IOP Publishing}
-}
-
+%
 @misc{cms_exotica_summary_plots,
-  author       = {TamasAlmosVami},
-  title        = {CMS Exotica Summary plots fro 13 TeV data},
+  title        = {CMS Exotica Summary plots from 13 TeV data},
   howpublished = {\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/SummaryPlotsEXO13TeV}},
   note         = {Accessed: 2024-12-15}
 }
-
-@ARTICLE{CMScollab,
-  title     = "The {CMS} experiment at the {CERN} {LHC}",
-  author    = "{The CMS Collaboration} ",
-  journal   = "J. Instrum.",
-  publisher = "IOP Publishing",
-  volume    =  3,
-  number    =  08,
-  pages     = "S08004--S08004",
-  month     =  aug,
-  year      =  2008
-}
-
-@article{cms2016_triggers,
-  title={The CMS trigger system},
-  author={CMS collaboration and others},
-  journal={arXiv preprint arXiv:1609.02366},
-  year={2016}
-}
+%
 @article{CMS:2016ngn,
     author = "Khachatryan, Vardan and others",
     collaboration = "CMS",
@@ -243,6 +97,7 @@ abstract = {Fast and efficient methods for the calibration and the alignment of 
     pages = "P01020",
     year = "2017"
 }
+%
 @techreport{CERN-LHCC-2020-004,
       collaboration = "CMS",
       title         = "{The Phase-2 Upgrade of the CMS Level-1 Trigger}",
@@ -253,8 +108,18 @@ abstract = {Fast and efficient methods for the calibration and the alignment of 
       url           = "https://cds.cern.ch/record/2714892",
       note          = "Final version",
 }
-
-
+%
+@techreport{Collaboration:2759072,
+      collaboration = "CMS",
+      title = "{The Phase-2 Upgrade of the CMS Data Acquisition and High Level Trigger}",
+      institution = "CERN",
+  	  reportNumber = "CERN-LHCC-2021-007, CMS-TDR-022",
+      address = "Geneva",
+      year = "2021",
+      url = "https://cds.cern.ch/record/2759072",
+      note = "Final version",
+}
+%
 @techreport{CMS-PAS-TRK-10-005,
       collaboration = "CMS",
       title         = "{Tracking and Primary Vertex Results in First 7 TeV
@@ -265,66 +130,43 @@ abstract = {Fast and efficient methods for the calibration and the alignment of 
       year          = "2010",
       url           = "https://cds.cern.ch/record/1279383",
 }
-
-@article{Tracking_2014,
-   title={Description and performance of track and primary-vertex reconstruction with the CMS tracker},
-   volume={9},
-   ISSN={1748-0221},
-   url={http://dx.doi.org/10.1088/1748-0221/9/10/P10009},
-   DOI={10.1088/1748-0221/9/10/p10009},
-   number={10},
-   journal={Journal of Instrumentation},
-   publisher={IOP Publishing},
-   author={Collaboration, The CMS},
-   year={2014},
-   month=oct, pages={P10009–P10009} }
-
-@book{Karimaki:368412,
-      author        = "Karimäki, V and Mannelli, M and Siegrist, P and Breuker,
-                       H and Caner, A and Castaldi, R and Freudenreich, K and
-                       Hall, G and Horisberger, R and Huhtinen, M and Cattai, A",
+%
+@article{CMS:2014pgm,
+    author = "Chatrchyan, Serguei and others",
+    collaboration = "CMS",
+    title = "{Description and performance of track and primary-vertex reconstruction with the CMS tracker}",
+    eprint = "1405.6569",
+    archivePrefix = "arXiv",
+    primaryClass = "physics.ins-det",
+    reportNumber = "CMS-TRK-11-001, CERN-PH-EP-2014-070",
+    doi = "10.1088/1748-0221/9/10/P10009",
+    journal = "JINST",
+    volume = "9",
+    number = "10",
+    pages = "P10009",
+    year = "2014"
+}
+%
+@techreport{Karimaki:368412,
       collaboration = "CMS",
       title         = "{The CMS tracker system project: Technical Design Report}",
-      publisher     = "CERN",
+      institution   = "CERN",
+      reportNumber  = "CERN-LHCC-98-006, CMS-TDR-5",
       address       = "Geneva",
-      series        = "Technical design report. CMS",
       year          = "1997",
       url           = "https://cds.cern.ch/record/368412",
 }
-
-@book{CERN-LHCC-2000-016,
-      collaboration = "CMS",
-      title         = "{The CMS tracker: addendum to the Technical Design
-                       Report}",
-      publisher     = "CERN",
-      address       = "Geneva",
-      series        = "Technical design report. CMS",
-      year          = "2000",
-      url           = "https://cds.cern.ch/record/490194",
+%
+@article{CMS:2012sda,
+    editor = "Matzner Dominguez, David Aaron and others",
+    collaboration = "CMS",
+    title = "{CMS Technical Design Report for the Pixel Detector Upgrade}",
+    reportNumber = "CERN-LHCC-2012-016, CMS-TDR-011",
+    doi = "10.2172/1151650",
+    month = "9",
+    year = "2012"
 }
-
-@techreport{Dominguez:1481838,
-      author        = "Dominguez, A and Abbaneo, D and Arndt, K and Bacchetta, N
-                       and Ball, A and Bartz, E and Bertl, W and Bilei, G M and
-                       Bolla, G and Cheung, H W K and Chertok, M and Costa, S and
-                       Demaria, N and Daniel Dominguez Vazquez and Ecklund, K and
-                       Erdmann, W and Gill, K and Hall, G and Harder, K and
-                       Hartmann, F and Horisberger, R and Johns, W and Kaestli, H
-                       C and Klein, K and Kotlinski, D and Kwan, S and Pesaresi, M
-                       and Postema, H and Rohe, T and Schäfer, C and Starodumov,
-                       A and Streuli, S and Tricomi, A and Tropea, P and Troska, J
-                       and Vasey, F and Zeuner, W",
-      editor        = "Dominguez, A",
-      title         = "{CMS Technical Design Report for the Pixel Detector
-                       Upgrade}",
-      reportNumber  = "CERN-LHCC-2012-016, CMS-TDR-11",
-      year          = "2012",
-      url           = "http://cds.cern.ch/record/1481838",
-      note          = "Additional contacts: Jeffrey Spalding, Fermilab,
-                       Jeffrey.Spalding@cern.ch Didier Contardo, Universite Claude
-                       Bernard-Lyon I, didier.claude.contardo@cern.ch",
-}
-
+%
 @techreport{Swartz:687440,
       author        = "Swartz, Morris",
       title         = "{A Detailed Simulation of the CMS Pixel Sensor}",
@@ -334,22 +176,22 @@ abstract = {Fast and efficient methods for the calibration and the alignment of 
       year          = "2002",
       url           = "https://cds.cern.ch/record/687440",
 }
-
-@article{Adam_2021,
-doi = {10.1088/1748-0221/16/02/P02027},
-url = {https://dx.doi.org/10.1088/1748-0221/16/02/P02027},
-year = {2021},
-month = {feb},
-publisher = {},
-volume = {16},
-number = {02},
-pages = {P02027},
-author = {W. Adam and T. Bergauer and D. Blöch and M. Dragicevic and R. Frühwirth and V. Hinger and H. Steininger and W. Beaumont and D. Di Croce and X. Janssen and J. Lauwers and P. Van Mechelen and N. Van Remortel and F. Blekman and S.S. Chhibra and J. De Clercq and J. D'Hondt and S. Lowette and S. Moortgat and A. Morton and K. Skovpen and A.R. Sahasransu and E. Sørensen Bols and P. Van Mulders and Y. Allard and D. Beghin and B. Bilin and B. Clerbaux and G. De Lentdecker and H. Delannoy and W. Deng and L. Favart and R. Goldouzian and A. Grebenyuk and A. Kalsi and M. Mahdavikhorrami and I. Makarenko and L. Moureaux and A. Popov and N. Postiau and F. Robert and Z. Song and L. Thomas and P. Vanlaer and D. Vannerom and Q. Wang and H. Wang and Y. Yang and O. Bondu and G. Bruno and C. Caputo and P. David and C. Delaere and M. Delcourt and A. Giammanco and V. Lemaitre and J. Prisciandaro and A. Saggio and N. Szilasi and M. Vidal Marono and P. Vischia and J. Zobec and V. Brigljević and D. Ferenček and D. Majumder and M. Roguljić and A. Starodumov and T. Susa and P. Eerola and E. Brücken and A. Gädda and T. Lampén and L. Martikainen and E. Tuominen and R. Turpeinen and A. Winkler and P. Luukka and T. Tuuva and J.-L. Agram and J. Andrea and D. Bloch and C. Bonnin and G. Bourgatte and J.-M. Brom and E. Chabert and L. Charles and C. Collard and E. Dangelser and U. Goerlach and C. Grimault and L. Gross and M. Krauth and N. Ollivier-Henry and E. Silva Jiménez and G. Baulieu and G. Boudoul and L. Caponetto and N. Chanon and D. Contardo and P. Dené and T. Dupasquier and G. Galbit and M. Gouzevitch and N. Lumb and L. Mirabito and B. Nodari and S. Perries and M. Vander Donckt and S. Viret and L. Feld and C. Fimmers and M. Fleck and M. Friedrichs and L. Gromann and W. Karpinski and K. Klein and M. Lipinski and P. Malek and D. Meuser and R. Narr and I. Oezen and A. Pauls and G. Pierschel and M. Preuten and M. Rauch and D. Rittich and N. Röwert and J. Sammet and S. Schmitz and J. Schulz and M. Teroerde and M. Wlochal and C. Dziwok and G. Fluegge and O. Pooth and A. Stahl and T. Ziemons and S. Arab and C. Asawatangtrakuldee and V. Botta and A. Burgmeier and L. Calligaris and C. Cheng and S. Choudhury and P. Connor and C. Contreras-Campana and A. De Wit and G. Dolinska and G. Eckerlin and D. Eckstein and T. Eichhorn and E. Gallo and M. Guthoff and K. Hansen and M. Haranko and A. Harb and C. Kleinwort and I. Korol and S. Kousar and R. Mankel and H. Maser and M. Meyer and M. Missiroli and C. Muhl and A. Mussgiller and A. Petrukhin and D. Pitzl and O. Reichelt and M. Savitskyi and P. Schuetze and C. Seitz and S. Spannagel and R. Stever and A. Vargas and R. Walsh and A. Zuber and A. Benecke and H. Biskop and P. Buhmann and M. Centis Vignali and A. Ebrahimi and M. Eich and J. Erfle and F. Feindt and A. Froehlich and E. Garutti and P. Gunnellini and J. Haller and T. Hermanns and A. Hinzmann and G. Kasieczka and R. Klanner and V. Kutzner and T. Lange and T. Lapsien and S. Mättig and Ch. Matthies and M. Matysek and M. Mrowietz and C. Niemeyer and Y. Nissan and K. Pena and A. Perieanu and J. Poehlsen and T. Poehlsen and O. Rieger and P. Schleper and J. Schwandt and D. Schwarz and V. Sola and J. Sonneveld and G. Steinbrück and A. Tews and B. Vormwald and J. Wellhausen and I. Zoi and M. Abbas and L. Ardila and M. Balzer and T. Barvich and M. Baselga and T. Blank and F. Bögelspacher and E. Butz and M. Caselle and F. Colombo and W. De Boer and A. Dierlamm and K. El Morabit and B. Freund and J.-O. Gosewisch and F. Hartmann and S. Heindl and J. Hunt and U. Husemann and R. Koppenhöfer and S. Kudella and S. Maier and S. Mallows and M. Metzler and Th. Muller and M. Musich and A. Nürnberg and O. Sander and D. Schell and M. Schröder and T. Schuh and I. Shvetsov and H.-J. Simonis and P. Steck and M. Wassmer and M. Weber and A. Weddigen and T. Weiler and G. Anagnostou and P. Asenov and P. Assiouras and G. Daskalakis and I. Kazas and A. Kyriakis and D. Loukas and L. Paspalaki and M. Bartók and T. Balázs and K. Márton and F. Siklér and V. Veszprémi and J. Karancsi and P. Mal and S. Swain and A. Bhardwaj and C. Jain and G. Jain and A. Kumar and K. Ranjan and S. Saumya and R. Bhattacharya and S. Dutta and P. Palit and G. Saha and S. Sarkar and P. Cariola and D. Creanza and M. de Palma and G. De Robertis and A. Di Florio and L. Fiore and M. Ince and F. Loddo and G. Maggi and S. Martiradonna and M. Mongelli and S. My and G. Selvaggi and L. Silvestris and S. Albergo and S. Costa and A. Di Mattia and R. Potenza and M.A. Saizu and A. Tricomi and C. Tuve and G. Barbagli and M. Brianzi and A. Cassese and R. Ceccarelli and R. Ciaranfi and V. Ciulli and C. Civinini and R. D'Alessandro and F. Fiori and E. Focardi and G. Latino and P. Lenzi and M. Lizzo and M. Meschini and S. Paoletti and E. Scarlini and R. Seidita and G. Sguazzoni and L. Viliani and F. Ferro and R. Mulargia and E. Robutti and F. Brivio and M.E. Dinardo and P. Dini and S. Gennai and L. Guzzi and S. Malvezzi and D. Menasce and L. Moroni and D. Pedrini and D. Zuolo and P. Azzi and N. Bacchetta and P. Bortignon and D. Bisello and T. Dorigo and M. Tosi and H. Yarar and L. Gaioni and M. Manghisoni and L. Ratti and V. Re and E. Riceputi and G. Traversi and G. Baldinelli and F. Bianchi and G.M. Bilei and S. Bizzaglia and M. Caprai and B. Checcucci and D. Ciangottini and L. Fanò and L. Farnesini and M. Ionica and G. Mantovani and V. Mariani and M. Menichelli and A. Morozzi and F. Moscatelli and D. Passeri and A. Piccinelli and P. Placidi and A. Rossi and A. Saha and A. Santocchia and D. Spiga and L. Storchi and T. Tedeschi and C. Turrioni and K. Androsov and P. Azzurri and G. Bagliesi and A. Basti and R. Beccherle and V. Bertacchi and L. Bianchini and T. Boccali and L. Borrello and F. Bosi and R. Castaldi and M.A. Ciocci and R. Dell'Orso and S. Donato and L. Giannini and A. Giassi and M.T. Grippo and F. Ligabue and G. Magazzu and E. Manca and G. Mandorli and E. Mazzoni and A. Messineo and A. Moggi and F. Morsani and F. Palla and F. Palmonari and S. Parolia and F. Raffaelli and A. Rizzi and S. Roy Chowdhury and P. Spagnolo and R. Tenchini and G. Tonelli and A. Venturi and P.G. Verdini and R. Bellan and M. Costa and R. Covarelli and G. Dellacasa and N. Demaria and S. Garbolino and E. Migliore and E. Monteil and M. Monteno and G. Ortona and L. Pacher and A. Paterno and A. Rivetti and A. Solano and E. Curras Rivera and J. Duarte Campderros and M. Fernandez and A. Garcia Alonso and G. Gomez and F.J. Gonzalez Sanchez and R. Jaramillo Echeverria and D. Moya and I. Vila and A.L. Virto and D. Abbaneo and I. Ahmed and B. Akgun and E. Albert and G. Auzinger and J. Bendotti and G. Bergamin and G. Blanchot and F. Boyer and A. Caratelli and R. Carnesecchi and D. Ceresa and J. Christiansen and K. Cichy and J. Daguin and S. Detraz and D. Deyrail and O. Dondelewski and N. Emriskova and B. Engegaard and F. Faccio and A. Filenius and N. Frank and T. French and K. Gill and G. Hugo and W. Hulek and L.M. Jara Casas and J. Kaplon and K. Kloukinas and A. Kornmayer and N. Koss and L. Kottelat and D. Koukola and M. Kovacs and A. La Rosa and P. Lenoir and R. Loos and A. Marchioro and S. Marconi and I. Mateos Dominguez and S. Mersi and S. Michelis and A. Onnela and S. Orfanelli and T. Pakulski and A. Papadopoulos and S. Pavis and A. Peisert and A. Perez and F. Perez Gomez and J.-F. Pernot and P. Petagna and Q. Piazza and H. Postema and K. Rapacz and S. Scarfí and P. Tropea and J. Troska and A. Tsirou and F. Vasey and B. Verlaat and P. Vichoudis and A. Zografos and L. Zwalinski and W. Bertl and S. Burkhalter and L. Caminada and W. Erdmann and R. Horisberger and H.-C. Kaestli and D. Kotlinski and U. Langenegger and B. Meier and T. Rohe and S. Streuli and F. Bachmair and M. Backhaus and R. Becker and P. Berger and D. di Calafiori and A. Calandri and L. Djambazov and M. Donega and C. Dorfer and P. Eller and C. Grab and D. Hits and J. Hoss and W. Lustermann and M. Meinhard and V. Perovic and M. Reichmann and B. Ristic and U. Roeser and M. Rossini and D. Ruini and V. Tavolaro and R. Wallny and D. Zhu and T. Aarrestad and K. Bösiger and D. Brzhechko and F. Canelli and A. De Cosa and R. Del Burgo and C. Galloni and M. Gienal and D. Hernandez Garland and A. Jofrehei and B. Kilminster and C. Lange and S. Leontsinis and A. Macchiolo and U. Molinatti and R. Maier and V. Mikuni and I. Neutelings and J. Ngadiuba and D. Pinna and G. Rauco and P. Robmann and Y. Takahashi and S. Wiederkehr and D. Wolf and A. Zucchetta and P.-H. Chen and W.-S. Hou and Y.-W. Kao and R.-S. Lu and M. Moya and D. Burns and E. Clement and D. Cussans and J. Goldstein and S. Seif El Nasr-Storey and J.A. Coughlan and K. Harder and K. Manolopoulos and I.R. Tomalin and J. Borg and G. Fedi and G. Hall and G. Iles and M. Pesaresi and A. Rose and K. Uchida and K. Coldham and J. Cole and M. Ghorbani and A. Khan and P. Kyberd and I.D. Reid and R. Bartek and A. Dominguez and R. Uniyal and A.M. Vargas Hernandez and G. Altopp and A. Alzahrani and G. Benelli and B. Burkle and X. Coubez and U. Heintz and E. Hinkle and N. Hinton and J. Hogan and A. Honma and A. Korotkov and J. Lee and D. Li and M. Lukasik and M. Narain and S. Sagir and F. Simpson and E. Spencer and E. Usai and J. Voelker and W.Y. Wong and W. Zhang and E. Cannaert and M. Chertok and J. Conway and G. Funk and G. Haza and F. Jensen and D. Pellett and M. Shi and J. Thomson and K. Tos and T. Welton and F. Zhang and G. Hanson and W. Si and S.B. Cooperstein and N. Deelen and R. Gerosa and S. Krutelyov and V. Sharma and A. Yagil and O. Colegrove and V. Dutta and L. Gouskos and J. Incandela and S. Kyre and H. Qu and M. Quinnan and J.P. Cumalat and W.T. Ford and E. MacDonald and A. Perloff and K. Stenson and K.A. Ulmer and S.R. Wagner and J. Alexander and Y. Bordlemay Padilla and Y. Cheng and J. Conway and D. Cranshaw and A. Datta and K. McDermott and J. Monroy and D. Quach and J. Reichert and A. Ryd and K. Smolenski and C. Strohman and Z. Tao and J. Thom and J.M. Tucker and P. Wittich and M. Zientek and M. Alyari and A. Bakshi and D.R. Berry and G. Bolla and K. Burkett and D. Butler and A. Canepa and H. Cheung and G. Derylo and A. Ghosh and C. Gingu and H. Gonzalez and S. Grünendahl and S. Hasegawa and M. Johnson and S. Kwan and C.M. Lei and R. Lipton and M. Liu and S. Los and V. Martinez Outschoorn and P. Merkel and S. Nahn and A. Prosser and F. Ravera and R. Rivera and B. Schneider and W.J. Spalding and L. Spiegel and S. Timpone and L. Uplegger and M. Verzocchi and E. Voirin and H.A. Weber and R. Habibullah and R. Yohay and H. Becerril Gonzalez and X. Chen and S. Dittmer and A. Evdokimov and O. Evdokimov and C.E. Gerber and D.J. Hofman and C. Mills and T. Roy and S. Rudrabhatla and J. Yoo and M. Alhusseini and S. Durgut and J. Nachtman and Y. Onel and C. Rude and C. Snyder and K. Yi and N. Eminizer and A. Gritsan and S. Kyriacou and P. Maksimovic and C. Mantilla Suarez and J. Roskes and M. Swartz and T. Vami and P. Baringer and A. Bean and Z. Flowers and S. Khalil and J.W. King and A. Kropivnitskaya and E. Schmitz and G. Wilson and A. Ivanov and T. Mitchell and A. Modak and R. Taylor and J.G. Acosta and L.M. Cremaldi and S. Oliveros and L. Perera and D. Summers and K. Bloom and D.R. Claes and C. Fangmeier and F. Golf and I. Kravchenko and J. Siado and I. Iashvili and A. Kharchilava and C. McLean and D. Nguyen and A. Parker and J. Pekkanen and S. Rappoccio and J. Li and A. Parker and L. Skinnari and K. Hahn and Y. Liu and K. Sung and J. Alimena and B. Cardwell and B. Francis and C.S. Hill and S. Malik and S. Norberg and J.E. Ramirez Vargas and R. Chawla and S. Das and S. Gurdasani and M. Jones and A. Jung and A. Koshy and G. Negro and J. Thieman and T. Cheng and J. Dolen and N. Parashar and K.M. Ecklund and S. Freed and M. Kilpatrick and A. Kumar and T. Nussbaum and R. Demina and J. Dulemba and O. Hindrichs and E. Bartz and A. Gandrakotra and Y. Gershtein and E. Halkiadakis and A. Hart and A. Lath and K. Nash and M. Osherson and S. Schnetzer and R. Stone and R. Eusebi and P. D'Angelo and W. Johns and K.O. Padeken},
-title = {The CMS Phase-1 pixel detector upgrade},
-journal = {Journal of Instrumentation},
-abstract = {The CMS detector at the CERN LHC features a silicon pixel detector as its innermost subdetector. The original CMS pixel detector has been replaced with an upgraded pixel system (CMS Phase-1 pixel detector) in the extended year-end technical stop of the LHC in 2016/2017. The upgraded CMS pixel detector is designed to cope with the higher instantaneous luminosities that have been achieved by the LHC after the upgrades to the accelerator during the first long shutdown in 2013–2014. Compared to the original pixel detector, the upgraded detector has a better tracking performance and lower mass with four barrel layers and three endcap disks on each side to provide hit coverage up to an absolute value of pseudorapidity of 2.5. This paper describes the design and construction of the CMS Phase-1 pixel detector as well as its performance from commissioning to early operation in collision data-taking.}
+%
+@article{CMSTrackerGroup:2020edz,
+    author = "Adam, W. and others",
+    collaboration = "CMS Tracker Group",
+    title = "{The CMS Phase-1 Pixel Detector Upgrade}",
+    eprint = "2012.14304",
+    archivePrefix = "arXiv",
+    primaryClass = "physics.ins-det",
+    doi = "10.1088/1748-0221/16/02/P02027",
+    journal = "JINST",
+    volume = "16",
+    number = "02",
+    pages = "P02027",
+    year = "2021"
 }
-
+%
 @article{French:2001xb,
     author = "French, M. J. and others",
     editor = "Ohsugi, T. and Unno, Y. and Sadrozinski, H. F. W. and Nakano, I.",
@@ -360,7 +202,7 @@ abstract = {The CMS detector at the CERN LHC features a silicon pixel detector a
     pages = "359--365",
     year = "2001"
 }
-
+%
 @online{NGT_proposal,
   author       = {CERN},
   title        = {Next {G}eneration {HEP T}riggers {P}roposal},
@@ -368,41 +210,55 @@ abstract = {The CMS detector at the CERN LHC features a silicon pixel detector a
   url          = {https://nextgentriggers.web.cern.ch/wp-content/uploads/2024/10/Next-Generation-HEP-Triggers-Proposal.pdf},
   urldate      = {2024-12-19}
 }
-
+%
 @online{CMSSW_ref,
   title = {{CMSSW}},
-  author = {{CMS} Collaboration}, 
+  author = "{{CMS} Collaboration}", 
   howpublished = {\url{http://cms-sw.github.io}},
-    year = {2023}
 }
-
-@misc{hayrapetyan2023development,
-  title={Development of the CMS detector for the CERN LHC Run 3},
-  author={Hayrapetyan, Aram and Tumasyan, Armen and Adam, Wolfgang and Andrejkovic, Janik Walter and Arnold, Bernhard and Bergauer, Herbert and Bergauer, Thomas and Chatterjee, Suman and Damanakis, Konstantinos and Dragicevic, Marko and others},
-  journal={arXiv preprint arXiv:2309.05466},
-  year={2023},
-  publisher={Sept}
-}
-
-% HCAL
-@article{CMS-PRF-18-001,
-    author = "{{CMS Collaboration}}",
+%
+@article{CMS:2008xjf,
+    author = "Chatrchyan, S. and others",
     collaboration = "CMS",
-    title = "{Calibration of the CMS hadron calorimeters using proton-proton collision data at $\sqrt{s} =$ 13 TeV}",
-    eprint = "1910.00079",
+    title = "{The CMS Experiment at the CERN LHC}",
+    doi = "10.1088/1748-0221/3/08/S08004",
+    journal = "JINST",
+    volume = "3",
+    pages = "S08004",
+    year = "2008"
+}
+@article{CMS:2023gfb,
+    author = "Hayrapetyan, Aram and others",
+    collaboration = "CMS",
+    title = "{Development of the CMS detector for the CERN LHC Run 3}",
+    eprint = "2309.05466",
     archivePrefix = "arXiv",
     primaryClass = "physics.ins-det",
-    reportNumber = "CMS-PRF-18-001, CERN-EP-2019-179",
-    doi = "10.1088/1748-0221/15/05/P05002",
+    reportNumber = "CMS-PRF-21-001, CERN-EP-2023-136",
+    doi = "10.1088/1748-0221/19/05/P05064",
     journal = "JINST",
-    volume = "15",
+    volume = "19",
     number = "05",
-    pages = "P05002",
-    year = "2020"
+    pages = "P05064",
+    year = "2024"
 }
-
-@article{CMS-PRF-18-003,
-    author = "{{CMS Collaboration}}",
+@article{CMS:2024ppo,
+    author = "Hayrapetyan, Aram and others",
+    collaboration = "CMS",
+    title = "{Performance of the CMS electromagnetic calorimeter in pp collisions at \ensuremath{\sqrt{}}$_{s}$ = 13 TeV}",
+    eprint = "2403.15518",
+    archivePrefix = "arXiv",
+    primaryClass = "physics.ins-det",
+    reportNumber = "CMS-EGM-18-002, CERN-EP-2024-014",
+    doi = "10.1088/1748-0221/19/09/P09004",
+    journal = "JINST",
+    volume = "19",
+    number = "09",
+    pages = "P09004",
+    year = "2024"
+}
+@article{CMS:2020mce,
+    author = "Sirunyan, Albert M and others",
     collaboration = "CMS",
     title = "{Measurements with silicon photomultipliers of dose-rate effects in the radiation damage of plastic scintillator tiles in the CMS hadron endcap calorimeter}",
     eprint = "2001.06553",
@@ -416,3 +272,36 @@ abstract = {The CMS detector at the CERN LHC features a silicon pixel detector a
     pages = "P06009",
     year = "2020"
 }
+@article{LHCb:2023hlw,
+    author = "Aaij, Roel and others",
+    collaboration = "LHCb",
+    title = "{The LHCb Upgrade I}",
+    eprint = "2305.10515",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "LHCb-DP-2022-002",
+    doi = "10.1088/1748-0221/19/05/P05065",
+    journal = "JINST",
+    volume = "19",
+    number = "05",
+    pages = "P05065",
+    year = "2024"
+}
+@article{CMS:2000eqx,
+    collaboration = "CMS",
+    title = "{The CMS tracker}: {addendum to the Technical Design Report}",
+    reportNumber = "CERN-LHCC-2000-016, CMS-TDR-5-add-1, CERN-LHCC-2000-016, CMS-TDR-5-add-1",
+    url           = "https://cds.cern.ch/record/490194",
+    year = "2000"
+}
+@article{Guida:2015gvw,
+    author = "Guida, S. Di and Govi, G. and Ojeda, M. and Pfeiffer, A. and Sipos, R.",
+    title = "{The CMS Condition Database System}",
+    doi = "10.1088/1742-6596/664/4/042024",
+    journal = "J. Phys. Conf. Ser.",
+    volume = "664",
+    number = "4",
+    pages = "042024",
+    year = "2015"
+}
+
